@startuml relational_view

/'{
    # PRIMARY KEY
    ~ UNIQUE (NULLABLE)
    + NOT NULL
    - NULLABLE
}'/

entity "Person" as Person {
    #id_person: INT
    -address: VARCHAR[255]
    -brith_date: DATE
    -dni: VARCHAR[10]
    +first_name: VARCHAR[100]
    -gender: CHAR[1]
    +last_name_father: VARCHAR[100]
    +last_name_mother: VARCHAR[100]
    +phone: VARCHAR[15]
    /' Person representa a la Person base, que puede ser paciente, médico o usuario '/
}

entity "Patient" as Patient {
    #id_patient: INT
    ~id_person: INT
    /' Un paciente es una Person, pero con un historial clínico asociado '/
}

entity "Doctor" as Doctor {
    #id_doctor: INT
    -specialty: VARCHAR[100]
    ~id_person: INT
    /' El médico es una Person con una specialty profesional '/
}

entity "User" as User {
    #id_user: INT
    +password: VARCHAR[255]
    -role: VARCHAR[50]
    +username: VARCHAR[50]
    ~id_person: INT
    /' User representa la información de los usuarios del sistema, con roles definidos '/
}

entity "Consultation" as Consultation {
    #id_consultation: INT
    +consultation_date: DATETIME
    -details: TEXT
    -reason: TEXT
    ~id_person: INT
    /' La consulta es realizada por una Person (puede ser un paciente o no), y contiene detalles '/
}

entity "VitalSings" as VitalSings {
    #id_vital_sign: INT
    -blood_pressure: VARCHAR[10]
    -heart_rate: INT
    +measuremennt_date: DATETIME
    -respiratory_rate: INT
    -temperature: DECIMAL[5,2]
    /' Signos vitales registrados durante una consulta, asociados al historial clínico '/
}

entity "Medical_History" as Medical_History {
    #id_history: INT
    +creation_date: DATE
    -observations: TEXT
    ~id_patient: INT
    /' El historial clínico se crea para cada paciente y contiene datos médicos relevantes '/
}

entity "Clinical_Exam" as Clinical_Exam {
    #id_exam: INT
    +exam_date: DATE
    +exam_type: VARCHAR[100] /' "Estomatológico" o "General" '/
    -findings: TEXT
    -recommendations: TEXT
    ~id_medical_history: INT
    /' Los exámenes clínicos, como estomatológicos o generales, se registran aquí '/
}


'entity "Odontogram" as Odontogram {
'    #id_odontogram: INT
'    +creation_date: DATE
'    -details: TEXT
'    ~id_medical_history: INT
'    'El odontograma es el registro de los dientes y su estado, utilizado en la odontología
'}

'entity "OdontogramaDetalle" as OdontogramaDetalle {
'    #id_detail: INT
'    -observations: TEXT
'    +tooth: VARCHAR[10] /' Número o posición del diente '/
'    -tooth_condition: VARCHAR[50] /' tooth_condition del diente, por ejemplo, "caries", "restaurado", "extracción" '/
'    -treatment: VARCHAR[100] /' treatment aplicado o recomendado '/
'    ~id_odontogram: INT
'    'Detalle específico de cada diente en el odontograma, incluyendo su estado y tratamiento
'}


entity "treatment" as treatment {
    #id_treatment: INT
    -cost: DECIMAL[10,2]
    -description: TEXT
    +treatment_name: VARCHAR[100]
    +treatment_type: VARCHAR[50] /' type de tratamiento: "Estético", "Curativo", "Preventivo", etc. '/
    /' Registro de los tratamientos disponibles, su first_name, type y costo asociado '/
}

entity "Appointment" as Appointment {
    #id_appointment: INT
    +appointment_date: DATETIME
    +appointment_date_end: DATETIME
    -notes: TEXT
    -state: TEXT
    ~id_person: INT
    ~id_patient: INT
    ~id_treatment: INT
    /' Información sobre cada cita médica, incluida la fecha, tratamiento, horario y médico '/
}

entity "Diagnosis" as Diagnosis {
    #id_diagnosis: INT
    +description: TEXT
    +diagnosis_date: DATE
    -recommendations: TEXT
    ~id_medical_history: INT
    /' Registro de los diagnósticos realizados, asociados al historial clínico '/
}

Person ||--o{ Patient : es
Person ||--o{ Doctor : es
Person ||--o{ User : es
Person ||--o{ Consultation : realiza
Patient ||--|{ Medical_History : tiene
'Odontogram ||--o{ OdontogramaDetalle : tiene

'Medical_History ||--o{ Odontogram : contiene
Medical_History ||--o{ VitalSings : registra
Medical_History ||--o{ Clinical_Exam : incluye

Patient ||--o{ Appointment : asiste a
Doctor ||--o{ Appointment : atiende

Appointment }o--|| treatment : aplica
Medical_History ||--o{ Diagnosis : contiene
@enduml
